--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="webCoRE">
+<html lang="en" ng-app="webCoRE" ng-class="'platform-' + platformCode">
     <head>
 		<base href="/"/>
         <meta charset="UTF-8">
