--- a/dashboard/html/modules/dashboard.module.html
+++ b/dashboard/html/modules/dashboard.module.html
@@ -269,6 +269,8 @@
     </li>
     <li><a data-target="#integrations" data-toggle="tab">Integrations</a>
     </li>
+    <li><a data-target="#backups" data-toggle="tab">Backups</a>
+    </li>
 </ul>
 
     <div class="tab-content clearfix">
@@ -360,6 +362,67 @@
 	    </shape>
 	  </ng-map>
 	</div><div ng-if="!!settings.places.length && isAppHosted && !presenceSensorId" class="place device" ng-click="registerPresenceSensor()"><i class="fas fa-map-marker-alt"></i><footer>Setup sensor</footer></div><div ng-if="settings.places.length < 10" class="place new" ng-click="addPlace()"></div>
+</div>
+
+<div ng-controller="pistonBackupsTable" class="tab-pane" id="backups">
+	<panel name="Automatic backups">
+		<p>Enable automatic backups to save the latest version of your piston for recovery in case the piston or webCoRE smart app is deleted. Use <em>New Piston > Restore a piston using a backup code</em> to recover a piston.</p>
+		<p>Use the Backup Pistons menu command to download all of your pistons to a file which is more convenient to restore and allows tracking of past versions rather than just the latest.</p>
+		<table ng-if="pistonBackupRows" class="table table-striped table-sortable">
+			<thead>
+				<tr>
+					<th ng-click="sortBy('name')">
+						Piston
+						<i data-prefix="fas" class="fas fa-sort{{orderProp != 'name' ? ' text-secondary' : reversed ? '-down' : '-up'}} no-ng-animate"></i>
+					</th>
+					<th ng-click="sortBy('category')">
+						Category
+						<i data-prefix="fas" class="fas fa-sort{{orderProp != 'category' ? ' text-secondary' : reversed ? '-down' : '-up'}} no-ng-animate"></i>
+					</th>
+					<th ng-click="sortBy('modified')">
+						Modified
+						<i data-prefix="fas" class="fas fa-sort{{orderProp != 'modified' ? ' text-secondary' : reversed ? '-down' : '-up'}} no-ng-animate"></i>
+					</th>
+					<th ng-click="sortBy('backupEnabled')">
+						Auto Backup
+						<i data-prefix="fas" class="fas fa-sort{{orderProp != 'backupEnabled' ? ' text-secondary' : reversed ? '-down' : '-up'}} no-ng-animate"></i>
+					</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="pistonRow in pistonBackupRows | orderBy:orderProp:reversed track by pistonRow.id">
+					<td>
+						<a ng-href="/piston/{{pistonRow.id}}" ng-click="openPiston(pistonRow.id);">
+							{{pistonRow.name}}
+						</a>
+					</td>
+					<td>
+						{{pistonRow.category}}
+					</td>
+					<td>
+						{{pistonRow.modified | date}}
+					</td>
+					<td>
+						<code ng-if="showBins && pistonRow.bin">
+							{{pistonRow.bin}}
+						</code>
+						<span ng-if="!showBins" class="{{pistonRow.bin ? 'text-success s-b' : ''}}">
+							<i class="fal fa-{{pistonRow.bin ? 'check' : 'times'}}"></i>
+							{{pistonRow.bin ? 'Enabled' : 'Disabled'}}
+						</span>
+					</td>
+				</tr>
+				<tr>
+					<td colspan="3"></td>
+					<td>
+						<button class="btn btn-info btn-sm" ng-click="showBins = !showBins">
+							{{showBins ? 'Hide' : 'Show'}} backup codes
+						</button>
+					</th>
+				</tr>
+			</tbody>
+		</table>
+	</panel>	
 </div>
   </div>
 	<form class="form-horizontal">
@@ -616,7 +679,7 @@
 		<div class="form-group">
 			<label for="piston">Retrieving selected pistons, please wait...</label>
 			<div class="progress">
-				<div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="{{designer.piston.length}}" style="width:{{100.0 * designer.progress / designer.pistons.length}}%">
+				<div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="{{designer.pistons.length}}" style="width:{{100.0 * designer.progress / designer.pistons.length}}%">
 			    	<span>{{designer.progress}} of {{designer.pistons.length}}</span>
 				</div>
 			</div>
@@ -638,6 +701,42 @@
           <button ng-if="designer.page==0" type="button" class="btn btn-info pull-right" ng-disabled="!designer.pistons || !designer.pistons.length" ng-click="backupPistons();">Backup</button>
           <button ng-if="designer.page==2" type="button" class="btn btn-info pull-right" ng-disabled="!designer.pistons || !designer.pistons.length" ng-click="saveBackup();">Save</button>
           <button type="button" class="btn btn-default" ng-click="closeDialog();">Cancel</button>
+      </footer>
+  </designer>
+</script>
+
+<script type="text/ng-template" id="dialog-migrate-piston-bins">
+<designer>
+      <header>
+          <h3>Migrate automatic backups</h3>
+          <span>Your account identifier has changed and all automatic backups of your pistons must be migrated to the new account. This is an automated process and no changes will be made to your pistons.</span>
+      </header>
+	<form ng-if="designer.page==0">
+		<p>The following piston backups need to be migrated:</p>
+		<ul>
+			<li ng-repeat="piston in designer.pistons track by piston.id">
+				{{piston.name}}
+			</li>
+		</ul>
+    </form>
+	<form ng-if="designer.page==1">
+		<div class="form-group">
+			<label for="piston">Migrating piston backups, please wait...</label>
+			<div class="progress">
+				<div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="{{designer.pistons.length}}" style="width:{{100.0 * designer.progress / designer.pistons.length}}%">
+			    	<span>{{designer.progress}} of {{designer.pistons.length}}</span>
+				</div>
+			</div>
+		</div>
+      </form>
+	<div ng-if="designer.page==2">
+		<h3>Migration complete</h3>
+		<p>This was a one time migration, all future piston edits will back up to your new account. Check out the Settings > Backups page to keep track of your backup codes.</p>
+    </div>
+      <footer>
+          <button ng-if="designer.page==0" type="button" class="btn btn-info pull-right" ng-click="migratePistonBackups();">Migrate backups</button>
+          <button ng-if="designer.page==2" type="button" class="btn btn-info" ng-click="closeDialog();">Done</button>
+          <button ng-if="designer.page!=2" type="button" class="btn btn-default" ng-click="closeDialog();">Cancel</button>
       </footer>
   </designer>
 </script>
