--- a/dashboard/html/modules/piston.module.html
+++ b/dashboard/html/modules/piston.module.html
@@ -2013,6 +2013,7 @@
 			</select>
 		</div>
 	</div>
+	<div class="help-text text-secondary small" ng-if="operand.help">{{operand.help}}</div>
 </script>
 
 
@@ -2095,6 +2096,7 @@
 			</select>
 		</div>
 	</div>
+	<div class="help-text text-secondary small" ng-if="parameter.help">{{parameter.help}}</div>
 	<div class="alert alert-warn" ng-if="parameter.warn">{{parameter.warn}}</div>
 </script>
 
