--- a/dashboard/html/modules/piston.module.html
+++ b/dashboard/html/modules/piston.module.html
@@ -426,7 +426,7 @@
 		<line com h>{{padComment('', 64)}}</line>
 		<line com h ng-if-end>/**************************************************************/</line>
 		<line>&nbsp;</line>
-		<line kwd ng-if-start="((mode == 'edit') && view.settings) || piston.o.pep || piston.o.cto || piston.o.ced || piston.o.mps || piston.o.dco || piston.o.des || piston.o.aps" ng-click="editSettings();">settings</line>
+		<line kwd ng-if-start="((mode == 'edit') && view.settings) || piston.o.pep || piston.o.cto || piston.o.ced || piston.o.mps || piston.o.dco || piston.o.des || piston.o.aps || piston.o.ish" ng-click="editSettings();">settings</line>
 		<container>
 			<line kwd ng-if="piston.o.pep">enable parallelism<span pun>;</span></line>
 			<line kwd ng-if="piston.o.mps">disable automatic piston state<span pun>;</span></line>
@@ -435,6 +435,11 @@
 			<line kwd ng-if="piston.o.des">disable event subscriptions<span pun>;</span></line>
 			<line kwd ng-if="piston.o.ced">set command execution delay to {{piston.o.ced}}ms<span pun>;</span></line>
 			<line kwd ng-if="piston.o.aps">allow pre-scheduled tasks to execute during restrictions<span pun>;</span></line>
+			<line kwd ng-if="piston.o.ish">
+				<strong class="text-danger" data-toggle="tooltip" data-title="This is a security risk, disable this setting unless you know what you are doing.">
+					<i class="fas fa-exclamation-triangle fa-sm"></i>
+					ignore SSL errors on all web requests</strong><span pun>;</span>
+			</line>
 		</container>
 		<line kwd>end settings;</line>
 		<line ng-if-end>&nbsp;</line>
@@ -2404,6 +2409,14 @@
 						<option ng-value="1">Enabled</option>
 						<option ng-value="0">Disabled (default)</option>
 					</select>
+				</div>
+				<div class="form-group">
+					<label class="col-lg-12 no-padding">Ignore SSL security issues for web requests</label>
+					<select data-actions-box="true" id="type" selectpicker class="selectpicker show-tick input-addon" data-width="100%" data-style="btn-info" ng-model="designer.ignoreSslErrors" data-mobile="{{mobile}}">
+						<option ng-value="1">Enabled</option>
+						<option ng-value="0">Disabled (default)</option>
+					</select>
+					<div class="help-text text-secondary small">Allows the use of self-signed SSL certificates on remote hosts for web requests issued by this piston.</div>
 				</div>
 				<div class="form-group">
 					<label class="col-lg-12 no-padding">Command execution delay</label>
